Updated content, and carousel viewing in JS

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                       <div class="card">
                         <div class="card-body">
                           <h5 class="card-title">Background</h5>
-                          <p class="card-text">I'm a Filipino <i class="philippines flag"></i>who grew and studied in China <i class="china flag"></i>.</p>
+                          <p class="card-text">I'm a Filipino <i class="philippines flag"></i>who grew up and studied in China <i class="china flag"></i>.</p>
                           <p class="card-text">I started working as a Manual Software Tester in a startup company based in Shenzhen China, then moved to Shanghai working for a creative agency where I was exposed to wider technologies excelling my skills in testing.</p>
                           <p>I then moved up my career into Digital Producer delivering small and large scale auto-motive based digital projects.</p>
                         </div>
