--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               <a class="navbar-brand " href="#home"><img class="img-fluid roll-in-blurred-left logo" src="images/myLogov2.png" alt=""></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
-              </button>
+              </button>  
 
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav ms-auto text-end">
@@ -35,7 +35,7 @@
                         <a class="nav-link" href="#portfolio">Portfolio</a>
                         <!-- <a class="nav-link" href="#experience">Experience</a> -->
                         <a class="nav-link" href="#contact">Contact</a>
-                        <a class="nav-link" href="https://www.google.com" target="_blank">Resume</a>
+                        <a class="nav-link" href="files/myResume.pdf" target="_blank">Resume</a>
                         <!-- <a class="nav-link" href="https://www.google.com" target="_blank">EN/中文</a> -->
                     </div>
                 </div>
