js and icons update

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class="container">
                     <img class="rounded-circle d-block mx-auto slide-in-blurred-top" src="images/profile1.jpg" alt="Kevin's Photo">
                     <h3 class="fw-lighter">Kevin Gamboa</h3>
-                    <p class="lead mx-2 mt-3 text-md-center">Hi! I'm a front-end developer who loves responsive design and css. I recently finished a degree in front-end web development at Treehouse and am excited to put all my skills to use!</p>
+                    <p class="lead mx-2 mt-3 text-md-center">Hi! I'm a front-end web developer who loves responsive design and css. I recently finished a degree in front-end web development at Treehouse and am excited to put all my skills to use!</p>
                 </div>
             </div>
         </div>
@@ -53,7 +53,7 @@
         <main>
             <!-- About section -->
             <div id="about" class="container" data-bs-offset="200" >
-                <h4 class="pt-2 text-center">About</h4>
+                <h4 class="py-2 text-center">About</h4>
                 <div class="row">
 
                     <div class="col-sm-6 col-lg-4">
@@ -87,7 +87,7 @@
                                     <div class="accordion-item">
                                       <h2 class="accordion-header" id="headingOne">
                                         <button class="accordion-button collapsed border-0" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                                          Front-end Web Development
+                                          Front-end Web Developer
                                         </button>
                                       </h2>
                                       <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
@@ -212,7 +212,7 @@
         <!-- Portfolio Section -->
             <div id="portfolio" class="myportfolio-sm">
               <div id="spin" class="container">
-                <h4 class="pt-2 text-center">Portfolio</h4>
+                <h4 class="py-2 text-center">Portfolio</h4>
                 <div id="carouselTabs" class="carousel carousel-dark slide" data-bs-ride="carousel">
                     <ol class="carousel-indicators">
                     <li data-bs-target="#carouselTabs" data-bs-slide-to="0" class="active"></li>
@@ -386,8 +386,28 @@
                 </ul>
 
                 <div id="contact" class="container text-center">
-                    <p class="fs-6 mb-0 mt-2"><strong>Mobile: </strong>+86 137 8894 9464  </p>
-                    <p class="fs-6"><strong>Email: </strong> kjangamboa@gmail.com</p>     
+                    <p class="fs-6 mb-0 mt-2">
+                      <?xml version="1.0" encoding="iso-8859-1"?>
+                      <svg x="0px" y="0px" viewBox="0 0 384 384" style="enable-background:new 0 0 384 384;" xml:space="preserve" height="20" widht="20">
+                        <g>
+                          <path d="M353.188,252.052c-23.51,0-46.594-3.677-68.469-10.906c-10.719-3.656-23.896-0.302-30.438,6.417l-43.177,32.594
+                            c-50.073-26.729-80.917-57.563-107.281-107.26l31.635-42.052c8.219-8.208,11.167-20.198,7.635-31.448
+                            c-7.26-21.99-10.948-45.063-10.948-68.583C132.146,13.823,118.323,0,101.333,0H30.813C13.823,0,0,13.823,0,30.813
+                            C0,225.563,158.438,384,353.188,384c16.99,0,30.813-13.823,30.813-30.813v-70.323C384,265.875,370.177,252.052,353.188,252.052z"/>
+                        </g>
+                        </svg>
+                      
+                      +86 137 8894 9464  </p>
+
+                    <p class="fs-6">
+                      <svg version="1.1"  x="0px" y="0px" viewBox="0 0 477.867 477.867" style="enable-background:new 0 0 477.867 477.867;" xml:space="preserve" width="20" hright="20">
+                        <g>
+                          <path d="M460.8,68.267H17.067l221.867,182.75L463.309,68.779C462.488,68.539,461.649,68.368,460.8,68.267z"/>
+    
+                          <path d="M249.702,286.31c-6.288,5.149-15.335,5.149-21.623,0L0,98.406v294.127c0,9.426,7.641,17.067,17.067,17.067H460.8
+                            c9.426,0,17.067-7.641,17.067-17.067V100.932L249.702,286.31z"/>
+                        </g>
+                      </svg> kjangamboa@gmail.com</p>     
                 </div>
 
             <div class="text-center mb-3">
