--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <link rel="stylesheet" href="styles/style.css">
     </head>
 
-    <body id="home">
+    <body>
         <!-- navigation -->
-        <nav id="nb" class="navbar navbar-expand-lg navbar-dark fixed-top py-1">
+        <nav class="navbar navbar-expand-lg navbar-dark fixed-top py-1">
             <div class="container container-fluid">
               <a class="navbar-brand " href="#home"><img class="img-fluid roll-in-blurred-left logo" src="images/myLogov3.png" alt=""></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -223,7 +223,7 @@
 
         <!-- Portfolio Section -->
             <div id="portfolio" class="myportfolio-sm">
-              <div id="spin" class="container">
+              <div class="container">
                 <h4 class="py-2 text-center">Portfolio</h4>
                 <div id="carouselTabs" class="carousel carousel-dark slide" data-bs-ride="carousel">
                     <ol class="carousel-indicators">
@@ -426,7 +426,13 @@
             </div>
         </footer>
 
-        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+<script> window.jQuery || document.write('<script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"><\/script>');</script> -->
+
+        <!-- <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script> -->
+        
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.1.0/mdb.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
         <script src="app.js"></script>
