--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                                               </div>
                                           </div>
 
-                                            <a class="fs-6 fw-light" href="#portfolio">Check out my portfolio!</a>
+                                            <a class="fs-6 fw-light" href="#myportfolio">Check out my portfolio!</a>
                                         </div>
                                       </div>
                                     </div>
