Typo fix and styling update

--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                       <div class="work-lists">
                         <ul>
                           <li>Creating project budgets and timeline</li>
-                  `        <li>Managing video assets and content editing for Press Conference in Auto-motive events</li>
+                          <li>Managing video assets and content editing for Press Conference in Auto-motive events</li>
                           <li>Managing Production & Production Technology deployments</li>
                           <li>Managing Hardware Sourcing, Testing and Inventory tracking</li>
                           <li>Managing Software Development projects for Automotive events</li>
@@ -349,7 +349,7 @@
                       </div>
                       <div class="education-titles">
                         <img src="images/moshlogo.png" alt="Team Treehouse logo">
-                        <h5>React - Certification </h5>
+                        <h5>Reactjs - Certification </h5>
                         <h6>Code With Mosh</h6>
                         <h6>2021 February - Current</h6>
                       </div>
@@ -373,7 +373,7 @@
                       </div>
                       <div class="education-titles">
                         <img src="images/treehouseLogo.png" alt="Team Treehouse logo">
-                        <h5>Front-end Web Development - <a href="https://www.credential.net/44ebf766-8a63-4c49-9e57-bc8e54574683">Techdegree</a></h5>
+                        <h5>Front-end Web Development - <a href="https://www.credential.net/44ebf766-8a63-4c49-9e57-bc8e54574683" target="_blank">Techdegree</a></h5>
                         <h6>Team Treehouse</h6>
                         <h6>2020 November - 2021 January</h6>
                       </div>
@@ -692,7 +692,7 @@
                       
                       +86 137 8894 9464  </p>
 
-                    <p class="fs-6">
+                    <p class="fs-6 mt-2">
                       <svg version="1.1"  x="0px" y="0px" viewBox="0 0 477.867 477.867" style="enable-background:new 0 0 477.867 477.867;" xml:space="preserve" width="20" height="20">
                         <g>
                           <path d="M460.8,68.267H17.067l221.867,182.75L463.309,68.779C462.488,68.539,461.649,68.368,460.8,68.267z"/>
