--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                                               </div>
 
                                               <div class="col">
-                                                <img src="images/Heroku.png" alt="Heroku logo">
+                                                <img src="images/heroku.png" alt="Heroku logo">
                                                 <p>Heroku</p>
                                               </div>
                                           </div>
